--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.13.1'
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.3.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1")
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
     def room_version = "2.3.0"
     implementation("androidx.room:room-runtime:$room_version")
