--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsAgency.NoActionBar"
         tools:ignore="AllowBackup">
-        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".NavActivity"
+            android:label="@string/title_activity_nav" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
