--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+
 
     <application
         android:name=".ApplicationContext"
@@ -15,10 +20,11 @@
         android:roundIcon="@drawable/news_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsAgency.NoActionBar"
-        tools:ignore="AllowBackup">
-        <activity
-            android:name=".NavActivity"
-            android:label="@string/title_activity_nav" />
+        android:usesCleartextTraffic="true"
+        tools:ignore="AllowBackup"
+        tools:targetApi="m">
+        <activity android:name=".CameraActivity" />
+        <activity android:name=".NavActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
