--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext.gradle_version = "7.0.4"
+    ext.kotlin_version = "1.5.31"
+    ext.coroutine_version = "1.5.2"
+    ext.lifecycle_version = "2.3.1"
+    ext.koin_version = "3.1.3"
+    ext.nav_version = "2.3.5"
+    ext.room_version = "2.3.0"
+
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
