--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.iml
+/.idea
+.idea
 .gradle
 /local.properties
 /.idea/caches
@@ -13,3 +15,5 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/
+.idea/
