--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
     defaultConfig {
         applicationId "com.albatros.newsagency"
         minSdkVersion 29
+        /* noinspection OldTargetApi */
         targetSdkVersion 30
         multiDexEnabled true
         versionCode 1
@@ -51,12 +52,16 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
 
+    /* noinspection GradleDependency */
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version")
-
+    /* noinspection GradleDependency */
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    /* noinspection GradleDependency */
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+    /* noinspection GradleDependency */
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    /* noinspection GradleDependency */
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation "androidx.work:work-runtime-ktx:2.7.1"
