--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     /* noinspection GradleDependency */
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    implementation "androidx.work:work-runtime-ktx:2.7.1"
+    /* noinspection GradleDependency */
+    implementation "androidx.work:work-runtime-ktx:2.6.0"
 
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
